--- a/content/issues/0000.md
+++ b/content/issues/0000.md
@@ -2,6 +2,7 @@ Title: 第 0000 期
 Date: 2018-01-07 00:00
 Modified: 2018-01-07 00:00
 Slug: issues/0000
+Category: issues
 Authors: Ju Lin
 Summary: 征求订阅的邮箱地址
 
