--- a/content/issues/0002.md
+++ b/content/issues/0002.md
@@ -8,4 +8,4 @@ Summary: Techshack Weekly 第 0002 期
 verse_start: 2018-01-13
 verse_end: 2018-01-21
 
-
+本期比较关注的几个领域有：TSDB, 系统设计，推荐的工具有: entr, explainshell, 温习了下 inode 的概念。
